--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,82 +9,80 @@
                 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
 
-       <body>
-          <div class="top-container">
-              <div class="top">
-                  <h1 class= "application-name">
-                      SELF <span>MANAGEMENT</span>
-                  </h1>
-                  <h2 class="application-kana">
-                    ーセルフ<span>マネジメント</span>ー
-                  </h2>
-              </div>
-                  <div class="navigation">
-                      <header>
+        <body>
+            <div class="top-container">
+                <div class="top">
+                    <h1 class= "application-name">
+                        SELF <span>MANAGEMENT</span>
+                    </h1>
+                    <h2 class="application-kana">
+                        ーセルフ<span>マネジメント</span>ー
+                    </h2>
+                </div>
+                    <div class="navigation">
+                        <header>
                             <% if flash[:success] %>
-                                <div class="alert alert-success" role="alert">
-                                    <p class="notice text-center" style="color:green;"><%= flash[:success] %></p>
+                                <div class="alert alert-warning" role="alert">
+                                    <p class="notice text-center"><%= flash[:success] %></p>
                                 </div>
-                            <% end %>
-                          <ul class="nav links">
-            
-                              <% if customer_signed_in? %>
-                              
-                                  <li class="list active">
-                                      <%= link_to customers_my_page_path, class: "btn btn-outline-secondary" do %>
-                                      <span class="title">マイページ</span>
-                                      <% end %>
-                                  </li>
-                                  
-                                  <li class="list active">
-                                      <%= link_to weights_path, class: "btn btn-outline-success" do %>
-                                      <span class="title">体重管理</span>
-                                      <% end %>
-                                  </li>
-                                  
-                                  <li class="list active">
-                                      <%= link_to meals_path, class: "btn btn-outline-info" do %>
-                                      <span class="title">食事管理</span>
-                                      <% end %>
-                                  </li>
-                                  
-                                  <li class="list active">
-                                      <%= link_to destroy_customer_session_path, method: :delete, class: "btn btn-outline-danger" do %>
-                                      <span class="title">ログアウト</span>
-                                      <% end %>
-                                  </li>
-                                  
-                                　<div class="login">
-                                      <span><%= current_customer.name %>さんでログイン中</span>
-                                  </div>
-                                  
-                              <% else %>
-                  
-                                  <li>
-                                      <%= link_to about_path, class: "btn btn-outline-warning" do %>
-                                      セルマネについて
-                                      <% end %>
-                                  </li>
-                  
-            
-                  
-                                  <li>
-                                      <%= link_to new_customer_registration_path, class: "btn btn-outline-dark" do %>
-                                      新規登録
-                                      <% end %>
-                                  </li>
-                  
-                                  <li>
-                                      <%= link_to new_customer_session_path, class: "btn btn-outline-primary" do %>
-                                      ログイン
-                                      <% end %>
-                                  </li>
-                              <% end %>
-                          </ul>
-
-                      </header>
-                  </div>
-          </div>
+                            <% end %>                            
+                                <ul class="nav links">
+                                    <% if customer_signed_in? %>
+                                      
+                                        <li class="list active">
+                                            <%= link_to customers_my_page_path, class: "btn btn-outline-secondary" do %>
+                                                <span class="title">マイページ</span>
+                                            <% end %>
+                                        </li>
+                    
+                                        <li class="list active">
+                                            <%= link_to weights_path, class: "btn btn-outline-success" do %>
+                                                <span class="title">体重管理</span>
+                                            <% end %>
+                                        </li>
+                                          
+                                        <li class="list active">
+                                            <%= link_to meals_path, class: "btn btn-outline-info" do %>
+                                                <span class="title">食事管理</span>
+                                            <% end %>
+                                        </li>
+                                          
+                                        <li class="list active">
+                                            <%= link_to destroy_customer_session_path, method: :delete, class: "btn btn-outline-danger" do %>
+                                                <span class="title">ログアウト</span>
+                                            <% end %>
+                                        </li>
+                                          
+                                        <div class="login">
+                                            <span><%= current_customer.name %>さんでログイン中</span>
+                                        </div>
+                                          
+                                    <% else %>
+                          
+                                        <li>
+                                            <%= link_to about_path, class: "btn btn-outline-warning" do %>
+                                                セルマネについて
+                                            <% end %>
+                                        </li>
+                          
+                    
+                          
+                                        <li>
+                                            <%= link_to new_customer_registration_path, class: "btn btn-outline-dark" do %>
+                                                新規登録
+                                            <% end %>
+                                        </li>
+                          
+                                        <li>
+                                            <%= link_to new_customer_session_path, class: "btn btn-outline-primary" do %>
+                                                ログイン
+                                            <% end %>
+                                        </li>
+                                    <% end %>
+                                </ul>
+                        </header>
+                    </div>
+            </div>
               <main id="content">
                 <%= yield %>
               </main>
