--- a/app/views/weights/index.html.erb
+++ b/app/views/weights/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <%= %>
             <h10 style="background-color: #3CB371">
                 体重登録・管理
             </h10>
@@ -32,7 +31,7 @@
         
                     <tbody>
                         
-                            <% @weight.each do |weight| %>
+                            <% @weight.reverse_each do |weight| %>
                                 <tr>
                                     <td><%= weight.created_at.strftime('%Y/%m/%d') %></td>
                                     <td><%= weight.current_weight %>kg</td>
