--- a/app/views/weights/edit.html.erb
+++ b/app/views/weights/edit.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-4">
             <h10 style="background-color: #3CB371">
-                登録した体重を編集する
+                登録した体重を編集
             </h10><br><br>
                 <%= form_with model: @weight, url: weight_path(@weight.id), local: true , method: :patch do |f| %>
                     <div class="form-group">
