--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -1,2 +1,23 @@
-<h1>Meals#show</h1>
-<p>Find me in app/views/meals/show.html.erb</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-9">
+            <h10 style="background-color: #3CB371">
+                食事写真
+            </h10>    
+        </div>
+            <div class="col-lg-9">
+                <h9>登録日時:</h9>
+                <%= @meal.created_at.strftime('%Y/%m/%d') %>
+            </div>
+                <div class="col-lg-9">
+                    <h9>料理名:</h9>
+                    <%= @meal.dish_name %>
+                </div>
+                    <div class="col-lg-9">
+                        <h9>料理写真</h9><br>
+                        <%= attachment_image_tag @meal, :image, :fill, 400, 300, format: "jpeg", fallback: "no-image.jpg", size: "550x400" %>
+                    </div>
+                    
+                
+    </div>
+</div>
