--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -13,7 +13,7 @@
                         
                             <div class="col">
                                 <%= f.label :商品画像, class: "col-sm-2" %>
-                                <%= f.attachment_field :image %>
+                                <%= f.file_field :image %>
                             </div>
                 
                         <%= f.submit "変更を保存", class: "btn btn-success mt-3 mx-auto" %>
