--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -18,7 +18,7 @@
                     
                         <div class="col">
                             <%= f.label :商品画像, class: "col-sm-2" %>
-                            <%= f.attachment_field :image %>
+                            <%= f.file_field :image %>
                         </div>
                 
                             <div class="col-sm-2 mt-auto ml-5">
