--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -6,16 +6,17 @@
             </h10>    
         </div>
             <div class="col-lg-9">
-                <h9>登録日時:</h9>
+                <h9>・</h9>
                 <%= @meal.created_at.strftime('%Y/%m/%d') %>
             </div>
                 <div class="col-lg-9">
-                    <h9>料理名:</h9>
+                    <h9>・</h9>
                     <%= @meal.dish_name %>
                 </div>
                     <div class="col-lg-9">
                         <h9>料理写真</h9><br>
-                        <%= attachment_image_tag @meal, :image, :fill, 400, 300, format: "jpeg", fallback: "no-image.jpg", size: "550x400" %>
+                        <%#= image_tag @meal, :image, format: "jpeg", fallback: "no-image.jpg", size: "550x400" %>
+                        <img src="<%= @meal.image %>" width="1001">
                     </div>
                     
                 
