--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -7,19 +7,22 @@
                 <%= form_with model: @meal, url: meal_path(@meal.id), local: true , method: :patch do |f| %>
                     <div class="form-group">
                         <div class="form-group row">
-                            <%= f.label :料理名, class: "col-sm-2" %>
+                            <%= f.label :料理名, class: "col-sm-3" %>
                             <%= f.text_field :dish_name, class: "form-control col-sm-4" %>
                         </div>
                         
                             <div class="col">
-                                <%= f.label :商品画像, class: "col-sm-2" %>
-                                <%= f.file_field :image %>
+                                <%= f.label :メモ, class: "col-sm-2" %>
+                                <%= f.text_area :comment, size: "35x7" %>
                             </div>
                 
                         <%= f.submit "変更を保存", class: "btn btn-success mt-3 mx-auto" %>
-                        <%= link_to meal_path, method: :delete, class: " btn btn-danger mt-3 mx-auto" do %>
-                        削除
-                        <% end %>
+                            <%= link_to meals_path, class: "btn btn-secondary mt-3 mx-auto" do %>
+                                変更せず戻る
+                            <% end %>                        
+                                <%= link_to meal_path, method: :delete, class: " btn btn-danger mt-3 mx-auto" do %>
+                                    削除
+                                <% end %>
                     </div>
                 <% end %>
         </div>
