--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -13,12 +13,12 @@
                 <div class="col">
                     <div class="form-group row">
                         <%= f.label :料理名, class: "col-sm-2" %>
-                        <%= f.text_field :dish_name, class: "form-control col-sm-4" %>
+                        <%= f.text_field :dish_name, class: "form-control col-sm-3" %>
                     </div>
                     
                         <div class="col">
-                            <%= f.label :商品画像, class: "col-sm-2" %>
-                            <%= f.file_field :image %>
+                            <%= f.label :メモ, class: "col-sm-1" %>
+                            <%= f.text_area :comment, size: "35x7" %>
                         </div>
                 
                             <div class="col-sm-2 mt-auto ml-5">
