--- a/app/views/weights/edit.html.erb
+++ b/app/views/weights/edit.html.erb
@@ -1,17 +1,19 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-7">
             <h10 style="background-color: #3CB371">
                 登録した体重を編集
             </h10><br><br>
                 <%= form_with model: @weight, url: weight_path(@weight.id), local: true , method: :patch do |f| %>
                     <div class="form-group">
                         <%= f.text_field :current_weight %>kg<br>
-                        <%#= f.hidden_field :id, :value => weight.id %>
-                        <%= f.submit "変更を保存", class: "btn btn-success mt-3 mx-auto" %>
-                        <%= link_to weight_path, method: :delete, class: " btn btn-danger mt-3 mx-auto" do %>
-                        削除
-                        <% end %>
+                            <%= f.submit "変更を保存", class: "btn btn-success mt-3 mx-auto" %>
+                                <%= link_to meals_path, class: "btn btn-secondary mt-3 mx-auto" do %>
+                                    変更せず戻る
+                                <% end %> 
+                                    <%= link_to weight_path, method: :delete, class: " btn btn-danger mt-3 mx-auto" do %>
+                                        削除
+                                    <% end %>
                     </div>
                 <% end %>
         </div>
