--- a/app/views/customers/unsubcribe.html.erb
+++ b/app/views/customers/unsubcribe.html.erb
@@ -12,7 +12,7 @@
      <% end %>
     </p>
     <p>
-     <%= link_to customers_withdrawal_path(@customer),method: :patch, class: " btn btn-danger active col-sm-3", style: "margin: 10px;" do %>
+     <%= link_to customers_withdraw_path(@customer),method: :patch, class: " btn btn-danger active col-sm-3", style: "margin: 10px;" do %>
      退会する
      <% end %>
     </p>
