--- a/app/views/customers/edit.html.erb
+++ b/app/views/customers/edit.html.erb
@@ -2,10 +2,12 @@
     <div class="row">
         <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
             <h10 style="background-color: #3CB371">会員情報編集</h10>
-                <%= form_with(model:@user, url:customer_path ,method: :PATCH) do |f| %>
+                <%= form_with(model:@customer, url:customer_path ,method: :PATCH) do |f| %>
                     <div>
                         <div class="col-xs-12">
                           <%= f.label :"氏名", class: "col-sm-3 control-label", style: "margin: 10px;" %>
+                          <%# logger.debug "aaaaaaaaaaaaaljnjkl" %>
+                          <%# logger.debug @customer.inspect %>
                           <%= f.text_field :name, class: "name col-sm-3 form-control-static name", style: "margin: 10px;" %>
                         </div>
                         
