--- a/app/views/meals/show.html.erb
+++ b/app/views/meals/show.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-9">
             <h10 style="background-color: #3CB371">
-                食事写真
+                食事詳細
             </h10>    
         </div>
             <div class="col-lg-9">
